dashboard/my-dashboard-gpu02.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: my-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-dashboard.gpu02.lysdemolab.fr`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
